Migrate event listner