@@ -3,11 +3,9 @@ import java.util.Arrays;
 
 public class ArrayListDemo {
     public static void main(String[] args) {
-/*
 
-        */
+
 /*Array Declaration and initializing*//*
-
 
         int[] numbers = new int[5];
         numbers[0] = 10;
@@ -15,6 +13,9 @@ public class ArrayListDemo {
         numbers[2] = 10;
         numbers[3] = 10;
         numbers[4] = 10;
+
+        int[] num;
+        num = new int[5];
 
         int[] numbers2 = new int[]{10,20,30,40,50};
 
@@ -24,8 +25,9 @@ public class ArrayListDemo {
         int[] numbers3 = {10,20,30,40};
 
         */
-/*int num3;
+        /*int num3;
         num3 = {10,20,30};*//*
+
 
 
         int i =10;
@@ -35,9 +37,8 @@ public class ArrayListDemo {
         System.out.println(j);
 
 
-        */
+*/
 /*Boxing and Unboxing*//*
-
 
         //Auto-Boxing
         Integer a =10;
@@ -52,27 +53,35 @@ public class ArrayListDemo {
         //Unboxing
         int c= b.intValue();
 
-        */
+*/
 /*==============================================*//*
 
 
+
         long x =20;
-        Long yy = 20L;
-        //Long y = 20; //can;t do auto boxing. we can manually do boxing
-        Long z = new Long(20);
-        Long z1 = Long.valueOf(20);
+        Long y = 20L;
+        //Long y1 = 20; //can;t do auto boxing. we can manually do boxing
+        Long y2 = new Long(20);
+        Long y3 = Long.valueOf(20);
+*/
 
-        */
-/*=============================================*//*
+/*=============================================*/
 
 
-        byte n1 = 10; // due to constant expression (only for assignment context)
+        /*byte n1 = 10; // due to constant expression (only for assignment context. it is not legal for method)
         byte n2 = 10+30;
+
+        //doSomething(10);
+        doSomething((byte)10); // need casting
+        byte num = 10; // need assign to byte type variable
+        doSomething(num);
+
         //byte n3 = 128; //out of range
 
         int n4 = 10;
-        //short n5 =n4;
-*/
+        //byte n5 =n4; // due to n4 is a variable and value can be change and value can exceed the limit of range*/
+
+
 
         /*=========================================*/
 
@@ -94,6 +103,7 @@ public class ArrayListDemo {
         System.out.println(Arrays.toString(numberA));
 
         numberA[0] = 100;
+
         System.out.println(Arrays.toString(numberA));
 
 
@@ -131,7 +141,7 @@ public class ArrayListDemo {
         System.out.println(numberB); //[300, 100, 200, 40, 30]
 
         System.out.println(numberB.contains(20));
-        System.out.println(numberB.contains(10));
+        System.out.println(numberB.contains(40));
 
         numberB.forEach(System.out::println);
 
@@ -139,5 +149,9 @@ public class ArrayListDemo {
         System.out.println(numberB);
 
 
+    }
+
+    public static void doSomething(byte b){
+        System.out.println(b);
     }
 }
